# banking-transaction-2phase-commit

./: README.md  debug_toxiproxy.py  docker-compose.yml  draft.txt  guide-testing.md  index.html  pyproject.toml  pytest.ini  test_toxiproxy.py
backend/: __init__.py  account_service.py  app.py  config.py  database.py  logger.py  two_phase_commit.py
backend/routes/: __init__.py  accounts.py  auth.py  recovery.py  transfer.py
backend/vbank_2pc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
db1-init/: init.sql
db2-init/: init.sql
db3-init/: init.sql
docs/: 2PC-PROTOCOL.md  API.md  ARCHITECTURE.md  DATABASE.md  ERROR-HANDLING.md  PRD.md  README.md  TEST-CASES.md  TOXIPROXY.md
frontend/: app.js  index.html  style.css
tests/: __init__.py  conftest.py  test_account_service.py  test_accounts_api.py  test_auth.py  test_config.py  test_database.py  test_transfer.py
